<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/title_nav_home" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/ic_menu_book"
        android:title="@string/title_nav_learn" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/title_nav_search" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_menu_notification"
        android:title="@string/title_nav_notification" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_menu_person"
        android:title="@string/title_nav_profile" />

</menu>