<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?actionBarSize">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/instituteBanner"
            android:layout_width="0dp"
            android:layout_height="268dp"
            android:background="#ededed"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/instituteBanner"
            app:layout_constraintEnd_toEndOf="@id/instituteBanner"
            app:layout_constraintStart_toStartOf="@+id/instituteBanner"
            app:layout_constraintTop_toTopOf="@+id/instituteBanner">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/institution_logo"
                android:layout_width="114dp"
                android:layout_height="26dp"
                android:scaleType="fitXY" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/institutionname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/institution_name"
                android:textColor="@color/white"
                app:fontFamily="@font/poppins_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/institutiondesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sample_logn_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:fontFamily="@font/poppins_medium" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/courseLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/card_shadow"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instituteBanner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_nav_knowledge"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xlarge"
                    app:fontFamily="@font/poppins_bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnInstitutionCourses"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginStart="?actionBarSize"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="?actionBarSize"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/institution_courses"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/active_orange"
                    app:cornerRadius="20dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/institutionCourseList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnProjects"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:layout_marginStart="?actionBarSize"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="?actionBarSize"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/projects"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/active_orange"
                    app:cornerRadius="20dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/projectsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>