<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/card_shadow"
    app:cardUseCompatPadding="true"
    app:contentPadding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/announcementTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_nav_announcement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_large"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/announcementDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/sample_logn_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_small"
            app:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/announcementTitle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/calendarIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/announcementDesc"
            app:srcCompat="@drawable/calendar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/announcementDt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="Date: 1st July 2021"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toEndOf="@+id/calendarIcon"
            app:layout_constraintTop_toTopOf="@+id/calendarIcon" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBookSlot"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/book_your_slot"
            android:textAllCaps="false"
            app:backgroundTint="@color/active_orange"
            app:cornerRadius="20dp"
            app:layout_constraintStart_toStartOf="@+id/announcementDt"
            app:layout_constraintTop_toBottomOf="@+id/announcementDt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>